[gd_scene load_steps=5 format=3 uid="uid://cci0owdbk2fr5"]

[ext_resource type="Theme" uid="uid://b1fx26em7338w" path="res://ui/themes/panel_container.tres" id="1_8yuru"]
[ext_resource type="Script" path="res://scenes/settings.gd" id="1_vu2hh"]
[ext_resource type="FontFile" uid="uid://5wohy1go68x5" path="res://ui/fonts/Tribal Garamond.ttf" id="2_yf67p"]
[ext_resource type="Texture2D" uid="uid://diotcuia4nehk" path="res://ui/icons/close.svg" id="4_1vq1p"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_vu2hh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
offset_left = 448.0
offset_top = 208.0
offset_right = 768.0
offset_bottom = 632.0
theme = ExtResource("1_8yuru")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="Volume" type="Label" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_yf67p")
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Volume" type="Control" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/Master Volume"]
layout_mode = 0
offset_left = 16.0
offset_right = 118.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_yf67p")
theme_override_font_sizes/font_size = 24
text = "Master"
vertical_alignment = 1

[node name="Master Bus" type="HSlider" parent="Control/PanelContainer/VBoxContainer/Master Volume"]
layout_mode = 0
offset_left = 118.0
offset_right = 294.0
offset_bottom = 40.0
min_value = -80.0
max_value = 6.0
value = 6.0

[node name="Music Volume" type="Control" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/Music Volume"]
layout_mode = 0
offset_left = 16.0
offset_right = 118.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_yf67p")
theme_override_font_sizes/font_size = 24
text = "Music"
vertical_alignment = 1

[node name="Music Bus" type="HSlider" parent="Control/PanelContainer/VBoxContainer/Music Volume"]
layout_mode = 0
offset_left = 118.0
offset_right = 294.0
offset_bottom = 40.0
min_value = -80.0
max_value = 6.0
value = 6.0

[node name="SFX Volume" type="Control" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/SFX Volume"]
layout_mode = 0
offset_left = 16.0
offset_right = 118.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_yf67p")
theme_override_font_sizes/font_size = 24
text = "SFX "
vertical_alignment = 1

[node name="SFX Bus" type="HSlider" parent="Control/PanelContainer/VBoxContainer/SFX Volume"]
layout_mode = 0
offset_left = 118.0
offset_right = 294.0
offset_bottom = 40.0
min_value = -80.0
max_value = 6.0
value = 6.0

[node name="Close Button" type="Button" parent="Control"]
offset_left = 720.0
offset_top = 224.0
offset_right = 752.0
offset_bottom = 256.0
icon = ExtResource("4_1vq1p")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="Control/PanelContainer/VBoxContainer/Master Volume/Master Bus" to="." method="_on_master_bus_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/VBoxContainer/Music Volume/Music Bus" to="." method="_on_music_bus_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/VBoxContainer/SFX Volume/SFX Bus" to="." method="_on_sfx_bus_value_changed"]
[connection signal="pressed" from="Control/Close Button" to="." method="_on_close_button_pressed"]
